--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navigation-header">
       <ul class="navigation">
         <li class="navigation__item">
-          <img src="./img/header-logo.svg" alt="Sedona" class="navigation__logo">
+          <img src="./img/header-logo.svg" alt="Sedona" class="navigation__logo" width="139px" height="70px">
         </li>
         <li class="navigation__item">
           <a href="index.html" class="navigation__link">Главная</a>
