--- a/catalog.html
+++ b/catalog.html
@@ -155,7 +155,7 @@
                 <button class="hostel-buy__favorite">В Избранное</button>
               </div>
             </li>
-            <li class="hostel-rating">
+            <li class="hostel-card-rating">
               <div class="rating-stars">
                 <button class="star-btn">
                   <p class="hidden">1 Звезда</p>
@@ -173,7 +173,7 @@
                   <p class="hidden">5 Звезд</p>
                 </button>
               </div>
-              <p class="hostel-raintg__number">Рейтинг: 8,5</p>
+              <p class="rating__number">Рейтинг: 8,5</p>
             </li>
           </ul>
         </div>
@@ -211,7 +211,7 @@
                   <p class="hidden">5 Звезд</p>
                 </button>
               </div>
-              <p class="raintg__number">Рейтинг: 8,9</p>
+              <p class="rating__number">Рейтинг: 8,9</p>
             </li>
           </ul>
         </div>
@@ -249,7 +249,7 @@
                   <p class="hidden">5 Звезд</p>
                 </button>
               </div>
-              <p class="raintg__number">Рейтинг: 9,2</p>
+              <p class="rating__number">Рейтинг: 9,2</p>
             </li>
           </ul>
         </div>
@@ -287,7 +287,7 @@
                   <p class="hidden">5 Звезд</p>
                 </button>
               </div>
-              <p class="raintg__number">Рейтинг: 9,2</p>
+              <p class="rating__number">Рейтинг: 9,2</p>
             </li>
           </ul>
           <div class="hostel-more-cont">
