сетка на гридах каталога крупных

--- a/catalog.html
+++ b/catalog.html
@@ -157,21 +157,11 @@
             </li>
             <li class="hostel-card-rating">
               <div class="rating-stars">
-                <button class="star-btn">
-                  <p class="hidden">1 Звезда</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">2 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">3 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">4 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">5 Звезд</p>
-                </button>
+                <img src="/img/star-rating.svg">
+                <img src="/img/star-rating.svg">
+                <img src="/img/star-rating.svg">
+                <img src="/img/star-rating.svg">
+                <img src="" alt="">
               </div>
               <p class="rating__number">Рейтинг: 8,5</p>
             </li>
@@ -195,21 +185,11 @@
             </li>
             <li class="hostel-card-rating">
               <div class="rating-stars">
-                <button class="star-btn">
-                  <p class="hidden">1 Звезда</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">2 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">3 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">4 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">5 Звезд</p>
-                </button>
+                <img src="/img/star-rating.svg">
+                <img src="/img/star-rating.svg">
+                <img src="/img/star-rating.svg">
+                <img src="">
+                <img src="">
               </div>
               <p class="rating__number">Рейтинг: 8,9</p>
             </li>
@@ -233,21 +213,11 @@
             </li>
             <li class="hostel-card-rating">
               <div class="rating-stars">
-                <button class="star-btn">
-                  <p class="hidden">1 Звезда</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">2 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">3 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">4 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">5 Звезд</p>
-                </button>
+                <img src="/img/star-rating.svg">
+                <img src="/img/star-rating.svg">
+                <img src="">
+                <img src="">
+                <img src="">
               </div>
               <p class="rating__number">Рейтинг: 9,2</p>
             </li>
@@ -271,50 +241,44 @@
             </li>
             <li class="hostel-card-rating">
               <div class="rating-stars">
-                <button class="star-btn">
-                  <p class="hidden">1 Звезда</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">2 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">3 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">4 Звезды</p>
-                </button>
-                <button class="star-btn">
-                  <p class="hidden">5 Звезд</p>
-                </button>
+                <img src="/img/star-rating.svg">
+                <img src="/img/star-rating.svg">
+                <img src="">
+                <img src="">
+                <img src="">
               </div>
               <p class="rating__number">Рейтинг: 9,2</p>
             </li>
           </ul>
-          <div class="hostel-more-cont">
-            <button class="hostel-roll-more" type="submit">Загрузить ещё</button>
-          </div>
-          <ul class="pagination">
-            <li class="pagination-item">
-              <a class="pagination-link pagination-current">1</a>
-            </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">2</a>
-            </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">3</a>
-            </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">4</a>
-            </li>
-            <li class="pagination-item">
-              <a class="pagination-link more-link" href="#">...</a>
-            </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">10</a>
-            </li>
-          </ul>
-          <select class="contol-hostel-select">
-            <p>Гостиниц на странице:</p>
+        </div>
+      </div>
+      <div class="hostel-more-cont">
+        <button class="hostel-roll-more" type="submit">Загрузить ещё</button>
+      </div>
+      <div class="other-rolls">
+        <ul class="pagination">
+          <li class="pagination-item pagination-current">
+            <a class="pagination-link pagination-current--text">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link more-link" href="#">...</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">10</a>
+          </li>
+        </ul>
+        <div class="hostel-select-cont">
+          <p class="hostel-select-title">Гостиниц на странице:</p>
+          <select class="control-hostel-select">
             <option value="number-1">1</option>
             <option value="number-2">2</option>
             <option value="number-3">3</option>
@@ -325,17 +289,20 @@
         </div>
       </div>
     </section>
-    <div class="mailing">
-      <h3 class="mailing__title">Подпишись на рассылку</h3>
-      <p class="mailing__description">
-        Только полезная информация и никакого спама,
-        честное бойскаутское!
-      </p>
-      <form action="https://echo.htmlacademy.ru/" method="post" class="mailing-form">
-        <input type="text" name="email" class="mailing-form__email" placeholder="Ваш e-mail">
-        <button type="submit" class="mailing-form__btn">Подписаться</button>
-      </form>
-    </div>
+    <section class="mailing mailing--catalog">
+      <h2 class="hidden">Рассылка</h2>
+      <div class="mailing__content mailing__content--catalog">
+        <h3 class="mailing__title">Подпишись на рассылку</h3>
+        <p class="mailing__description">
+          Только полезная информация и никакого спама,
+          честное бойскаутское!
+        </p>
+        <form action="https://echo.htmlacademy.ru/" method="post" class="mailing__form">
+          <input type="text" name="email" class="mailing__email mailing__email--catalog" placeholder="Ваш e-mail">
+          <button type="submit" class="mailing__btn">Подписаться</button>
+        </form>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <section class="footer__content">
