сетка на гридах главной страницы

--- a/index.html
+++ b/index.html
@@ -49,82 +49,84 @@
         заслуживающий большего!</h3>
       <p class="description__causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
-    <section class="cause-1">
-      <h2 class="hidden">Первая причина</h2>
-      <div class="cause cause--1-2">
-        <h3 class="cause__title cause__title--cause-1">Настоящий городок</h3>
-        <p class="cause__number">- №1 -</p>
-        <p class="cause__description">Седона — не аттракцион для туристов, там течёт
-          своя жизнь</p>
-      </div>
-      <img src="./img/causes-photo1.jpg" alt="Город" class="cause-1__wallpaper" width="800px" height="384px">
-    </section>
-    <section class="advantages">
-      <h2 class="hidden">Преимущества</h2>
-      <ul class="advantages">
-        <li class="advantages__item advantages__item--1-3">
-          <img src="./img/advantage-1.svg" width="75" height="72" class="advantages__icon">
-          <h3 class="advantages__title">Жильё</h3>
-          <p class="advantages__description">
-            Рекомендуем пожить
-            в настоящем мотеле,
-            всё как в кино!
-          </p>
-        </li>
-        <li class="advantages__item">
-          <img src="./img/advantage-2.svg" width="74" height="70" class="advantages__icon">
-          <h3 class="advantages__title">Еда</h3>
-          <p class="advantages__description">
-            Всегда заказывайте
-            топовый фирменный бургер, вы не разочаруетесь!
-          </p>
-        </li>
-        <li class="advantages__item advantages__item--1-3">
-          <img src="./img/advantage-3.svg" width="64" height="76" class="advantages__icon">
-          <h3 class="advantages__title">Сувениры</h3>
-          <p class="advantages__description">
-            Не только китайского,
-            но и настоящего местного производства!
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section class="cause-2">
-      <h2 class="hidden">Вторая причина</h2>
-      <img src="./img/causes-photo2.jpg" alt="Мост дьявола" class="cause-2__wallpaper">
-      <div class="cause cause--1-2">
-        <h3 class="cause__title">Там есть мость дьявола</h3>
-        <p class="cause__number">- №2 -</p>
-        <p class="cause__description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-      </div>
-    </section>
-    <section class="other-causes">
-      <h2 class="hidden">Остальные причины</h2>
-      <ul class="cause-list">
-        <li class="cause__item cause--3-5">
-          <h3 class="cause__title cause__title--other">Небольшая площадь</h3>
-          <p class="cause__number">- №3 -</p>
-          <p class="cause__description">
-            Все достопримечательности
-            находятся очень близко
-          </p>
-        </li>
-        <li class="cause__item cause--4">
-          <h3 class="cause__title cause__title--other">Красивая дорога</h3>
-          <p class="cause__number">- №4 -</p>
-          <p class="cause__description">
-            Ехать в Седону из Лас-Вегаса совсем не скучно!
-          </p>
-        </li>
-        <li class="cause__item cause--3-5">
-          <h3 class="cause__title cause__title--other">Мало туристов</h3>
-          <p class="cause__number">- №5 -</p>
-          <p class="cause__description">
-            Большинство едет в Гранд Каньон и толпится там
-          </p>
-        </li>
-      </ul>
-    </section>
+    <div class="causes-grid-cont">
+      <section class="cause-1">
+        <h2 class="hidden">Первая причина</h2>
+        <div class="cause cause--1-2">
+          <h3 class="cause__title cause__title--cause-1">Настоящий городок</h3>
+          <p class="cause__number">- №1 -</p>
+          <p class="cause__description">Седона — не аттракцион для туристов, там течёт
+            своя жизнь</p>
+        </div>
+        <img src="./img/causes-photo1.jpg" alt="Город" class="cause-1__wallpaper" width="800px" height="384px">
+      </section>
+      <section class="advantages">
+        <h2 class="hidden">Преимущества</h2>
+        <ul class="advantages">
+          <li class="advantages__item advantages__item--1-3">
+            <img src="./img/advantage-1.svg" width="75" height="72" class="advantages__icon">
+            <h3 class="advantages__title">Жильё</h3>
+            <p class="advantages__description">
+              Рекомендуем пожить
+              в настоящем мотеле,
+              всё как в кино!
+            </p>
+          </li>
+          <li class="advantages__item">
+            <img src="./img/advantage-2.svg" width="74" height="70" class="advantages__icon">
+            <h3 class="advantages__title">Еда</h3>
+            <p class="advantages__description">
+              Всегда заказывайте
+              топовый фирменный бургер, вы не разочаруетесь!
+            </p>
+          </li>
+          <li class="advantages__item advantages__item--1-3">
+            <img src="./img/advantage-3.svg" width="64" height="76" class="advantages__icon">
+            <h3 class="advantages__title">Сувениры</h3>
+            <p class="advantages__description">
+              Не только китайского,
+              но и настоящего местного производства!
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="cause-2">
+        <h2 class="hidden">Вторая причина</h2>
+        <img src="./img/causes-photo2.jpg" alt="Мост дьявола" class="cause-2__wallpaper">
+        <div class="cause cause--1-2">
+          <h3 class="cause__title">Там есть мость дьявола</h3>
+          <p class="cause__number">- №2 -</p>
+          <p class="cause__description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+        </div>
+      </section>
+      <section class="other-causes">
+        <h2 class="hidden">Остальные причины</h2>
+        <ul class="cause-list">
+          <li class="cause__item cause--3-5">
+            <h3 class="cause__title cause__title--other">Небольшая площадь</h3>
+            <p class="cause__number">- №3 -</p>
+            <p class="cause__description">
+              Все достопримечательности
+              находятся очень близко
+            </p>
+          </li>
+          <li class="cause__item cause--4">
+            <h3 class="cause__title cause__title--other">Красивая дорога</h3>
+            <p class="cause__number">- №4 -</p>
+            <p class="cause__description">
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
+          <li class="cause__item cause--3-5">
+            <h3 class="cause__title cause__title--other">Мало туристов</h3>
+            <p class="cause__number">- №5 -</p>
+            <p class="cause__description">
+              Большинство едет в Гранд Каньон и толпится там
+            </p>
+          </li>
+        </ul>
+      </section>
+    </div>
     <section class="hotel">
       <h2 class="hidden">Поиск гостиницы</h2>
       <div class="hotel__content">
@@ -153,22 +155,24 @@
   </main>
   <footer class="footer">
     <section class="footer__content">
-      <nav class="social-links">
-        <ul class="social">
-          <li class="social__item">
-            <a href="#"><img src="/img/footer-twitter.svg" alt="Twitter"></a>
-          </li>
-          <li class="social__item">
-            <a href="#"><img src="/img/footer-facebook.svg" alt="Facebook"></a>
-          </li>
-          <li class="social__item">
-            <a href="#"><img src="/img/footer-youtube.svg" alt="Youtube"></a>
-          </li>
-          </li>
-        </ul>
-      </nav>
-      <a href="tel:+78128121212" class="contact-phone">+7 (812) 812-12-12</a>
-      <img src="./img/logo-htmlacademy.svg" alt="HTML-Academy" class="footer__logo">
+      <div class="footer__grid-cont">
+        <nav class="social-links">
+          <ul class="social">
+            <li class="social__item">
+              <a href="#"><img src="/img/footer-twitter.svg" alt="Twitter"></a>
+            </li>
+            <li class="social__item">
+              <a href="#"><img src="/img/footer-facebook.svg" alt="Facebook"></a>
+            </li>
+            <li class="social__item">
+              <a href="#"><img src="/img/footer-youtube.svg" alt="Youtube"></a>
+            </li>
+            </li>
+          </ul>
+        </nav>
+        <a href="tel:+78128121212" class="contact-phone">+7 (812) 812-12-12</a>
+        <img src="./img/logo-htmlacademy.svg" alt="HTML-Academy" class="footer__logo">
+      </div>
     </section>
   </footer>
 </body>
