--- a/catalog.html
+++ b/catalog.html
@@ -13,8 +13,8 @@
   <header class="header">
     <nav class="navigation">
       <ul class="navigation-list">
-        <li class="navigation__item">
-          <img src="./img/header-logo.svg" alt="Sedona" class="navigation__logo" width="139px" height="70px">
+        <li class="navigation__item navigation__logo">
+          <img src="./img/header-logo.svg" alt="Sedona" class="header__logo" width="139px" height="70px">
         </li>
         <li class="navigation__item">
           <a href="index.html" class="navigation__link">Главная</a>
@@ -35,7 +35,7 @@
           <a href="#" class="navigation__link navigation__user"><img src="/img/header-favorite.svg" alt="Избранное"></a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__button">Хочу сюда!</a>
+          <button href="#" class="navigation__button">Хочу сюда!</button>
         </li>
       </ul>
     </nav>
