--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="#" class="navigation__link">О Седоне</a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link">Гостиницы</a>
+          <a href="catalog.html" class="navigation__link">Гостиницы</a>
         </li>
       </ul>
       <ul class="navigation-user">
@@ -33,7 +33,7 @@
           <a href="#" class="navigation__link navigation__user"><img src="/img/header-favorite.svg" alt="Избранное"></a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__button">Хочу сюда!</a>
+          <button href="#" class="navigation__button">Хочу сюда!</button>
         </li>
       </ul>
     </nav>
